// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a secondary image 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div
        id="0"
      >
        <div>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "secondary",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "3:2",
                "uri": "https://image-2.io",
              }
            }
          />
        </div>
      </div>
      <aside
        id="related-articles"
      />
      <div>
        <p>
          Comments are subject to our community guidelines, which can be viewed
           
          <a
            href="//www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
          >
            here
          </a>
          .
        </p>
        <div />
      </div>
    </div>
  </div>
</article>
`;

exports[`2. an inline image 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div
        id="0"
      >
        <div>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "inline",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "9:4",
                "uri": "https://image-inline.io",
              }
            }
          />
        </div>
      </div>
      <aside
        id="related-articles"
      />
      <div>
        <p>
          Comments are subject to our community guidelines, which can be viewed
           
          <a
            href="//www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
          >
            here
          </a>
          .
        </p>
        <div />
      </div>
    </div>
  </div>
</article>
`;
